@@ -2,6 +2,11 @@ package edu.kit.varijoern.featuremodel;
 
 import edu.kit.varijoern.config.InvalidConfigException;
 import edu.kit.varijoern.config.NamedComponentConfigFactory;
+import edu.kit.varijoern.featuremodel.featureide.FeatureIDEFMReader;
+import edu.kit.varijoern.featuremodel.featureide.FeatureIDEFMReaderConfig;
+import edu.kit.varijoern.featuremodel.tortekmax.TorteKmaxFMReader;
+import edu.kit.varijoern.featuremodel.tortekmax.TorteKmaxFMReaderConfig;
+import org.jetbrains.annotations.NotNull;
 import org.tomlj.TomlTable;
 
 import java.nio.file.Path;
@@ -11,8 +16,8 @@ import java.util.List;
  * This class is used for parsing the feature model reader section of a configuration file.
  * It uses its {@code name} field to determine which {@link FeatureModelReaderConfig} subclass to use.
  */
-public class FeatureModelReaderConfigFactory extends NamedComponentConfigFactory<FeatureModelReaderConfig> {
-    private static final FeatureModelReaderConfigFactory instance = new FeatureModelReaderConfigFactory();
+public final class FeatureModelReaderConfigFactory extends NamedComponentConfigFactory<FeatureModelReaderConfig> {
+    private static final FeatureModelReaderConfigFactory INSTANCE = new FeatureModelReaderConfigFactory();
 
     private FeatureModelReaderConfigFactory() {
     }
@@ -22,8 +27,8 @@ public class FeatureModelReaderConfigFactory extends NamedComponentConfigFactory
      *
      * @return the instance
      */
-    public static FeatureModelReaderConfigFactory getInstance() {
-        return instance;
+    public static @NotNull FeatureModelReaderConfigFactory getInstance() {
+        return INSTANCE;
     }
 
     /**
@@ -32,23 +37,23 @@ public class FeatureModelReaderConfigFactory extends NamedComponentConfigFactory
      *
      * @return the objects into which the command line arguments for the feature model readers should be parsed
      */
-    public static List<Object> getComponentArgs() {
+    public static @NotNull List<Object> getComponentArgs() {
         return List.of(); // Currently, no feature model reader has command line arguments
     }
 
     @Override
-    protected FeatureModelReaderConfig newConfigFromName(String componentName, TomlTable toml, Path configPath)
+    protected @NotNull FeatureModelReaderConfig newConfigFromName(@NotNull String componentName,
+                                                                  @NotNull TomlTable toml, @NotNull Path configPath)
             throws InvalidConfigException {
         return switch (componentName) {
             case FeatureIDEFMReader.NAME -> new FeatureIDEFMReaderConfig(toml, configPath);
             case TorteKmaxFMReader.NAME -> new TorteKmaxFMReaderConfig(toml, configPath);
-            default ->
-                    throw new InvalidConfigException(String.format("Unknown feature model reader \"%s\"", componentName));
+            default -> throw new InvalidConfigException("Unknown feature model reader \"%s\"".formatted(componentName));
         };
     }
 
     @Override
-    public String getComponentType() {
+    public @NotNull String getComponentType() {
         return "feature model reader";
     }
 }
